fix java11 ci build